--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
         <!-- FOOTER -->
             <footer class="row footer">
                 <div class="col-lg-2 col-12">
-                    <img src="images/face.png" alt="">
+                    <a href="https://www.facebook.com/" target="_blank"><img src="images/face.png" alt=""></a>
                 </div>
                 <div class="col-lg-2 col-12">
-                    <img src="images/ig.png" alt="">
+                   <a href="https://www.instagram.com/" target="_blank"><img src="images/ig.png" alt=""></a>
                 </div>
                 <div class="col-lg-4 col-12">
                     <h3 class="centrar">© BIKE HOUSE, Reservados todos los derechos.</h3>
                 </div>
                 <div class="col-lg-2 col-12">
-                    <img src="images/tw.png" alt="">
+                    <a href="https://twitter.com/home?lang=es" target="_blank"><img src="images/tw.png" alt=""></a>
                 </div>
                 <div class="col-lg-2 col-12">
-                    <img src="images/yt.png" alt="">
+                    <a href="https://www.youtube.com/" target="_blank"><img src="images/yt.png" alt=""></a>
                 </div>
             </footer>
     <!-- LINK JS -->
