--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body class="home">
       <!-- HEADER NAV -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary" class="navbar bg-dark" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="images/LOGO.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top">
@@ -29,7 +29,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ms-auto">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
@@ -82,9 +82,7 @@
         </div>
 
         <!-- CAROUSEL -->
-      
 
-        <H2 class="centrar">SEGUINOS EN NUESTRO CANAL DE YOUTUBE</H2>
       </main>
 
 
