se agrego el sector de info, se linkearon los links del nav y se agrego un video

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
         <h1 class="titulo">BIENVENIDO A BIKE HOUSE</h1>
         
         <!-- CAROUSEL -->
-        <div id="carouselExampleIndicators" class="carousel slide">
+      <div class="carrusel">
+        <div id="carouselExampleIndicators" class="carousel slide ">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -80,8 +81,45 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-
+      </div>
         <!-- CAROUSEL -->
+
+        <!-- VIDEO -->
+        <div class="row centrar video">
+          <div class="col-lg-12 col-12 "></div>  
+            <iframe width="auto" height="auto" src="https://www.youtube.com/embed/2kovwfIfQFY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+        </div>
+
+
+
+      <!-- VIDEO -->
+
+        <!-- INFO -->
+      <div class="separa">
+        <div class="contenedor">
+          <div class="row centrar">
+            <div class="col-lg-4 col-12">
+                <img src="images/market.png" alt="facebook">
+                <h1>Elegí los productos que vas a comprar</h1>
+                <p>Si querés más de uno, sumalos a tu carrito</p>
+            </div>
+            <div class="col-lg-4 col-12">
+                <img src="images/tarjeta.png" alt="instagram">
+                <h1>Pagá con el medio de pago que quieras</h1>
+                <p>Comprá con seguridad: usamos la tecnología de Mercado Pago.</p>
+            </div>
+            <div class="col-lg-4 col-12">
+                <img src="images/envio.png" alt="twitter">
+                <h1>Recibí el producto que esperás</h1>
+                <p>Elegí la forma de entrega que prefieras ¡y listo! Aseguramos tu entrega con Mercado Envíos.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+        <!-- INFO -->
+
+
 
       </main>
 
@@ -91,21 +129,21 @@
 
         <!-- FOOTER -->
             <footer class="container-fluid footer">
-              <div class="row">
+              <div class="row centrar">
                 <div class="col-lg-2 col-12">
-                    <a href="https://www.facebook.com/" target="_blank"><img src="images/face.png" alt=""></a>
+                    <a href="https://www.facebook.com/" target="_blank"><img src="images/face.png" alt="facebook"></a>
                 </div>
                 <div class="col-lg-2 col-12">
-                   <a href="https://www.instagram.com/" target="_blank"><img src="images/ig.png" alt=""></a>
+                   <a href="https://www.instagram.com/" target="_blank"><img src="images/ig.png" alt="instagram"></a>
                 </div>
                 <div class="col-lg-4 col-12">
                     <h3 class="centrar">© BIKE HOUSE, Reservados todos los derechos.</h3>
                 </div>
                 <div class="col-lg-2 col-12">
-                    <a href="https://twitter.com/home?lang=es" target="_blank"><img src="images/tw.png" alt=""></a>
+                    <a href="https://twitter.com/home?lang=es" target="_blank"><img src="images/tw.png" alt="twitter"></a>
                 </div>
                 <div class="col-lg-2 col-12">
-                    <a href="https://www.youtube.com/" target="_blank"><img src="images/yt.png" alt=""></a>
+                    <a href="https://www.youtube.com/" target="_blank"><img src="images/yt.png" alt="youtube"></a>
                 </div>
               </div>
             </footer>
