se agregaron separadores

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="#">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="pages/contacto.html">CONTACTO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="pages/nosotros.html">NOSOTROS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a class="nav-link" href="pages/productos.html">PRODUCTOS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a class="nav-link" href="pages/servicios.html">SERVICIOS</a>
         </li>
       </ul>
     </div>
@@ -51,8 +51,9 @@
 </nav>
         <!-- HEADER NAV -->
       <main>
-        <h1 class="titulo">BIENVENIDO A BIKE HOUSE</h1>
-        
+        <div class="separa">
+          <h1 class="titulo">BIENVENIDO A BIKE HOUSE</h1>
+        </div>
         <!-- CAROUSEL -->
       <div class="carrusel">
         <div id="carouselExampleIndicators" class="carousel slide ">
@@ -85,14 +86,11 @@
         <!-- CAROUSEL -->
 
         <!-- VIDEO -->
-        <div class="row centrar video">
-          <div class="col-lg-12 col-12 "></div>  
+        <div class="row centrar ">
+          <div class="col-lg-12 col-12">
             <iframe width="auto" height="auto" src="https://www.youtube.com/embed/2kovwfIfQFY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
         </div>
-
-
-
       <!-- VIDEO -->
 
         <!-- INFO -->
@@ -131,19 +129,19 @@
             <footer class="container-fluid footer">
               <div class="row centrar">
                 <div class="col-lg-2 col-12">
-                    <a href="https://www.facebook.com/" target="_blank"><img src="images/face.png" alt="facebook"></a>
+                    <a href="https://www.facebook.com/" target="_blank"><img   class="img"src="images/face.png" alt="facebook"></a>
                 </div>
                 <div class="col-lg-2 col-12">
-                   <a href="https://www.instagram.com/" target="_blank"><img src="images/ig.png" alt="instagram"></a>
+                   <a href="https://www.instagram.com/" target="_blank"><img   class="img" src="images/ig.png" alt="instagram"></a>
                 </div>
                 <div class="col-lg-4 col-12">
                     <h3 class="centrar">© BIKE HOUSE, Reservados todos los derechos.</h3>
                 </div>
                 <div class="col-lg-2 col-12">
-                    <a href="https://twitter.com/home?lang=es" target="_blank"><img src="images/tw.png" alt="twitter"></a>
+                    <a href="https://twitter.com/home?lang=es" target="_blank"><img  class="img" src="images/tw.png" alt="twitter"></a>
                 </div>
                 <div class="col-lg-2 col-12">
-                    <a href="https://www.youtube.com/" target="_blank"><img src="images/yt.png" alt="youtube"></a>
+                    <a href="https://www.youtube.com/" target="_blank"><img class="img" src="images/yt.png" alt="youtube"></a>
                 </div>
               </div>
             </footer>
