--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
         <!-- CAROUSEL -->
 
         <!-- VIDEO -->
+        <H1>SEGUINOS EN NUESTRO CANAL DE YOUTUBE</H1>
         <div class="row centrar ">
-          <div class="col-lg-12 col-12">
-            <iframe width="auto" height="auto" src="https://www.youtube.com/embed/2kovwfIfQFY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <div class="col-lg-12 col-12 video">
+            <iframe width="600" height="300" src="https://www.youtube.com/embed/2kovwfIfQFY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
         </div>
       <!-- VIDEO -->
