--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <!-- VIDEO -->
         <H1>SEGUINOS EN NUESTRO CANAL DE YOUTUBE</H1>
         <div class="row centrar ">
-          <div class="col-lg-12 col-12 video">
+          <div class="col-lg-12 col-12">
             <iframe width="600" height="300" src="https://www.youtube.com/embed/2kovwfIfQFY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
         </div>
@@ -121,10 +121,6 @@
 
 
       </main>
-
-
-
-
 
         <!-- FOOTER -->
             <footer class="container-fluid footer">
