--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIKE HOUSE - SERVICIOS</title>
+    <link rel="shortcut icon" href="../images/LOGO.png" type="image/x-icon">
         <!-- LINK CSS BOOTSTRAP -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <!-- LINK CSS BOOTSTRAP -->
@@ -34,13 +35,13 @@
                 <a class="nav-link " aria-current="page" href="../index.html">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/contacto.html">CONTACTO</a>
+                <a class="nav-link" href="contacto.html">CONTACTO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/nosotros.html">NOSOTROS</a>
+                <a class="nav-link" href="nosotros.html">NOSOTROS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/productos.html">PRODUCTOS</a>
+                <a class="nav-link" href="productos.html">PRODUCTOS</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#">SERVICIOS</a>
@@ -54,12 +55,9 @@
     <main>
         <div class="centrar">
             <h1 class="titulo">Querés hacerle un service a tu bicicleta? Te contamos que incluye el nuestro…</h1>
-            <h3 class="titulo">Nuestro taller está distinguido como el único Shimano Service Center de Santa Fe y alrededores, siendo una de las primeras bicicleterías en Argentina en obtener esta distinción</h3>
+            <h3 class="titulo">Nuestro taller está distinguido como el único Shimano Service Center de Buenos Aires y alrededores, siendo una de las primeras bicicleterías en Argentina en obtener esta distinción</h3>
             <h3 class="titulo">QUE SERVICIO OFRECEMOS?</h3>
         </div>
-
-
-
 
         <div class="accordion separa" id="accordionExample">
             <div class="accordion-item">
