se creo la pagina de contacto

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -53,7 +53,7 @@
               <!-- HEADER NAV -->
 
     <main>
-        <div class="centrar">
+        <div class="centrar separa">
             <h1 class="titulo">Querés hacerle un service a tu bicicleta? Te contamos que incluye el nuestro…</h1>
             <h3 class="titulo">Nuestro taller está distinguido como el único Shimano Service Center de Buenos Aires y alrededores, siendo una de las primeras bicicleterías en Argentina en obtener esta distinción</h3>
             <h3 class="titulo">QUE SERVICIO OFRECEMOS?</h3>
