se arreglo un bug en el contorno

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -52,8 +52,8 @@
       </nav>
       <!-- HEADER NAV -->
       <main>
-        <div class="separa">
-            <h1  class="contorno">QUIENES SOMOS?</h1>
+        <div class="separa centrar">
+            <h1  class="contorno_s">QUIENES SOMOS?</h1>
             <h1 class="contorno">Somos una empresa Argentina con más de 70 años de experiencia en la fabricación de bicicletas, sus repuestos y accesorios.
             Cubrimos una amplia y extensa variedad del mercado nacional soportado por un importante y profesional capital humano, más de 250 distribuidores a lo largo de todo el país y la infraestructura más grande y moderna de Argentina. Contamos con una política de fabricación masiva, la cual satisface las necesidades de los clientes más exigentes.</h1>
         </div>    
