--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -74,7 +74,7 @@
             </div>  
             <div class="col-lg-6 col-12 contorno">
                 <h1>DONDE NOS ENCONTRAMOS</h1>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105025.24740133251!2d-58.60424124462152!3d-34.65371846316962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbdaea7a9516f%3A0xe760329f1cbcd9de!2sBike%20House!5e0!3m2!1ses-419!2sar!4v1679014510796!5m2!1ses-419!2sar" width="70%" height="70%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="video" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105025.24740133251!2d-58.60424124462152!3d-34.65371846316962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbdaea7a9516f%3A0xe760329f1cbcd9de!2sBike%20House!5e0!3m2!1ses-419!2sar!4v1679014510796!5m2!1ses-419!2sar" width="70%" height="70%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>      
         </div>    
     </div>    
