--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -54,8 +54,8 @@
 <main>
 
     <div class="container-fluid">
-        <div class="row centrar separa">
-            <div class="col-lg-3 col-12 contorno separa">
+        <div class="row centrar">
+            <div class="col-lg-3 col-12 contorno">
                 <div>
                     <h1>CONTACTANOS</h1>
                     <form action="#" method="POST" class="text-input-1">
