--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIKE HOUSE - HOME</title>
     <link rel="shortcut icon" href="images/LOGO.png" type="image/x-icon">
+
+    
+    <meta name="description" content="En nuestra tienda online encontrarás una amplia selección de bicicletas de alta calidad. Compra la bicicleta de tus sueños aquí al mejor precio. Envío gratis en todas nuestras bicicletas.">
+    <meta name="keywords" content="Venta de bicicletas, Bicicletas online, Bicicletas de carretera, Bicicletas de montaña, Comprar bicicletas, Tienda de bicicletas, Bicicletas de alta calidad, Envío gratis.">
+
+
     <!-- LINK CSS BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!-- LINK CSS BOOTSTRAP -->
@@ -87,7 +93,7 @@
         <!-- CAROUSEL -->
 
         <!-- VIDEO -->
-        <H1>SEGUINOS EN NUESTRO CANAL DE YOUTUBE</H1>
+        <h2>SEGUINOS EN NUESTRO CANAL DE YOUTUBE</h2>
         <div class="row centrar">
           <div class="col-lg-6 col-12">
             <iframe class="video" src="https://www.youtube.com/embed/2kovwfIfQFY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -101,17 +107,17 @@
           <div class="row centrar">
             <div class="col-lg-4 col-12">
                 <img src="images/market.png" alt="facebook">
-                <h1>Elegí los productos que vas a comprar</h1>
+                <h2>Elegí los productos que vas a comprar</h2>
                 <p>Si querés más de uno, sumalos a tu carrito</p>
             </div>
             <div class="col-lg-4 col-12">
                 <img src="images/tarjeta.png" alt="instagram">
-                <h1>Pagá con el medio de pago que quieras</h1>
+                <h2>Pagá con el medio de pago que quieras</h2>
                 <p>Comprá con seguridad: usamos la tecnología de Mercado Pago.</p>
             </div>
             <div class="col-lg-4 col-12">
                 <img src="images/envio.png" alt="twitter">
-                <h1>Recibí el producto que esperás</h1>
+                <h2>Recibí el producto que esperás</h2>
                 <p>Elegí la forma de entrega que prefieras ¡y listo! Aseguramos tu entrega con Mercado Envíos.</p>
             </div>
           </div>
@@ -133,7 +139,7 @@
                    <a href="https://www.instagram.com/" target="_blank"><img   class="img" src="images/ig.png" alt="instagram"></a>
                 </div>
                 <div class="col-lg-4 col-12">
-                    <h3 class="centrar">© BIKE HOUSE, Reservados todos los derechos.</h3>
+                    <h3>© BIKE HOUSE, Reservados todos los derechos.</h3>
                 </div>
                 <div class="col-lg-2 col-12">
                     <a href="https://twitter.com/home?lang=es" target="_blank"><img  class="img" src="images/tw.png" alt="twitter"></a>
