--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIKE HOUSE - CONTACTO</title>
     <link rel="shortcut icon" href="../images/LOGO.png" type="image/x-icon">
+
+    <meta name="description" content="En nuestra tienda online encontrarás una amplia selección de bicicletas de alta calidad. Compra la bicicleta de tus sueños aquí al mejor precio. Envío gratis en todas nuestras bicicletas.">
+    <meta name="keywords" content="Venta de bicicletas, Bicicletas online, Bicicletas de carretera, Bicicletas de montaña, Comprar bicicletas, Tienda de bicicletas, Bicicletas de alta calidad, Envío gratis.">
+
+
+
+
         <!-- LINK CSS BOOTSTRAP -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <!-- LINK CSS BOOTSTRAP -->
@@ -58,7 +65,7 @@
             <div class="col-lg-3 col-12 contorno">
                 <div>
                     <h1>CONTACTANOS</h1>
-                    <form action="#" method="POST" class="text-input-1">
+                    <form action="#" method="POST" class="text-input-1 centar">
                         <label for="nombre">Nombre:</label>
                         <input type="text" id="nombre" name="nombre" required>
                     
@@ -73,7 +80,7 @@
                 </div>
             </div>  
             <div class="col-lg-6 col-12 contorno">
-                <h1>DONDE NOS ENCONTRAMOS</h1>
+                <h2>DONDE NOS ENCONTRAMOS</h2>
                 <iframe class="video" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105025.24740133251!2d-58.60424124462152!3d-34.65371846316962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbdaea7a9516f%3A0xe760329f1cbcd9de!2sBike%20House!5e0!3m2!1ses-419!2sar!4v1679014510796!5m2!1ses-419!2sar" width="70%" height="70%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>      
         </div>    
