--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIKE HOUSE - NOSOTROS</title>
-    <link rel="shortcut icon" href="../images/LOGO.png" type="image/x-icon">    
+    <link rel="shortcut icon" href="../images/LOGO.png" type="image/x-icon"> 
+    
+    <meta name="description" content="En nuestra tienda online encontrarás una amplia selección de bicicletas de alta calidad. Compra la bicicleta de tus sueños aquí al mejor precio. Envío gratis en todas nuestras bicicletas.">
+    <meta name="keywords" content="Venta de bicicletas, Bicicletas online, Bicicletas de carretera, Bicicletas de montaña, Comprar bicicletas, Tienda de bicicletas, Bicicletas de alta calidad, Envío gratis.">    
+
+
+
     <!-- LINK CSS BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!-- LINK CSS BOOTSTRAP -->
@@ -53,9 +59,9 @@
       <!-- HEADER NAV -->
       <main>
         <div class="separa centrar">
-            <h1  class="contorno_s">QUIENES SOMOS?</h1>
-            <h1 class="contorno">Somos una empresa Argentina con más de 70 años de experiencia en la fabricación de bicicletas, sus repuestos y accesorios.
-            Cubrimos una amplia y extensa variedad del mercado nacional soportado por un importante y profesional capital humano, más de 250 distribuidores a lo largo de todo el país y la infraestructura más grande y moderna de Argentina. Contamos con una política de fabricación masiva, la cual satisface las necesidades de los clientes más exigentes.</h1>
+            <h1  class="contorno">QUIENES SOMOS?</h1>
+            <h2 class="contorno">Somos una empresa Argentina con más de 70 años de experiencia en la fabricación de bicicletas, sus repuestos y accesorios.
+            Cubrimos una amplia y extensa variedad del mercado nacional soportado por un importante y profesional capital humano, más de 250 distribuidores a lo largo de todo el país y la infraestructura más grande y moderna de Argentina. Contamos con una política de fabricación masiva, la cual satisface las necesidades de los clientes más exigentes.</h2>
         </div>    
 
         <div class="separa">
