--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -9,6 +9,11 @@
         <!-- LINK CSS BOOTSTRAP -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <!-- LINK CSS BOOTSTRAP -->
+
+        <meta name="description" content="En nuestra tienda online encontrarás una amplia selección de bicicletas de alta calidad. Compra la bicicleta de tus sueños aquí al mejor precio. Envío gratis en todas nuestras bicicletas.">
+        <meta name="keywords" content="Venta de bicicletas, Bicicletas online, Bicicletas de carretera, Bicicletas de montaña, Comprar bicicletas, Tienda de bicicletas, Bicicletas de alta calidad, Envío gratis.">
+
+
     
         <!-- LINK CSS-->
         <link rel="stylesheet" href="../css/style.css">
