--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/m1_banner_02-scaled-1 (1).jpg" class="d-block w-100" alt="...">
+              <img src="images/m1_banner_02-scaled-1 (1).jpg" class="d-block w-100" alt="promo bicicleta">
             </div>
             <div class="carousel-item">
-              <img src="images/banner_mobile_265.jpg" class="d-block w-100" alt="...">
+              <img src="images/banner_mobile_265.jpg" class="d-block w-100" alt="cuotas en pago de bicicletas">
             </div>
             <div class="carousel-item">
-              <img src="images/banner 2 especial bicicletas MARZO 2023 1920 x 750.jpg" class="d-block w-100" alt="...">
+              <img src="images/banner 2 especial bicicletas MARZO 2023 1920 x 750.jpg" class="d-block w-100" alt="promo especial de bicicletas">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
