se hizo la pagina de nosotros con flex

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,7 +63,7 @@
     <div class="container-fluid">
         <div class="row centrar">
             <div class="col-lg-3 col-12 contorno">
-                <div>
+                <div class="centrar">
                     <h1>CONTACTANOS</h1>
                     <form action="#" method="POST" class="text-input-1 centar">
                         <label for="nombre">Nombre:</label>
